[tool.poetry]
name = "leaf-disease-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
timm = "^0.9.16"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
torchaudio = "^2.2.1"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
